Add feedback form

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
   overflow: hidden;
 }
+
+#feedback {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%)
+}
+
+.blur {
+  filter: blur(8px);
+  pointer-events: none;
+}
